# src/main/java/com/dant/app/DBEndpoint.java
@@ -1,23 +1,16 @@
 package com.dant.app;
 
-import com.dant.entity.HttpResponse;
-import com.dant.entity.Location;
 import com.dant.entity.ResponseError;
 import com.dant.entity.TableEntity;
 import com.dant.exception.BadRequestException;
 import com.dant.utils.Log;
-import com.google.gson.Gson;
-import com.google.gson.reflect.TypeToken;
 import db.structure.Database;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.lang.reflect.Type;
 import java.util.ArrayList;
 
-/**
- * Created by pitton on 2017-02-20.
- */
+
 @Path("/db")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -25,15 +18,17 @@ public class DBEndpoint {
 
     @PUT
     @Path("/tables")
-    public Response createTable(String body) {
-        Type tableListType = new TypeToken<ArrayList<TableEntity>>(){}.getType();
+    public Response createTables(ArrayList<TableEntity> allTables, @DefaultValue("null") @HeaderParam("InternalToken") String InternalToken) {
+        boolean addImmediatly = InternalToken.equals(Database.getInstance().config.SuperSecretPassphrase);
         try {
-            ArrayList<TableEntity> allTables = new Gson().fromJson(body, tableListType);
-            if (allTables.size() == 0) {
-                throw new BadRequestException("No table found in request body");
-            } else {
-                return Database.getInstance().addTables(allTables);
-            }
+            ArrayList<ResponseError> allErrors = Database.getInstance().addTables(allTables, addImmediatly);
+            if (allErrors != null)
+                return com.dant.utils.Utils.generateResponse(400, "error", "application/json", allErrors);
+
+            if (!addImmediatly)
+               db.network.Network.broadcast("zbeb", allTables);
+
+            return com.dant.utils.Utils.generateResponse(200, "ok", "application/json", "table successfully inserted");
         } catch (Exception exp) { //Todo improve on error handling by catching only specific exception types
             Log.error(exp);
             throw new BadRequestException("invalid table body, check your args");
